--- a/Draw/Controller/Home/HomeController.xib
+++ b/Draw/Controller/Home/HomeController.xib
@@ -46,15 +46,19 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<string key="IBUINormalTitle">Check-in</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="700530203">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
 						<reference key="IBUINormalTitleColor" ref="700530203"/>
-						<object class="NSColor" key="IBUINormalTitleShadowColor" id="157938274">
+						<object class="NSColor" key="IBUINormalTitleShadowColor">
 							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
+							<bytes key="NSWhite">MAA</bytes>
+							<object class="NSColorSpace" key="NSCustomColorSpace" id="730621736">
+								<int key="NSID">2</int>
+							</object>
 						</object>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
@@ -62,11 +66,11 @@
 						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
-							<double key="pointSize">17</double>
+							<double key="pointSize">14</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">17</double>
+							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
@@ -81,16 +85,15 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<string key="IBUINormalTitle">start</string>
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<object class="NSColor" key="IBUINormalTitleColor" id="123217188">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MAA</bytes>
-							<object class="NSColorSpace" key="NSCustomColorSpace" id="730621736">
-								<int key="NSID">2</int>
-							</object>
+							<reference key="NSCustomColorSpace" ref="730621736"/>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="157938274"/>
+						<reference key="IBUINormalTitleShadowColor" ref="700530203"/>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="644626406">
 							<int key="type">2</int>
 							<double key="pointSize">20</double>
@@ -118,7 +121,10 @@
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 						</object>
-						<reference key="IBUINormalTitleShadowColor" ref="157938274"/>
+						<object class="NSColor" key="IBUINormalTitleShadowColor" id="157938274">
+							<int key="NSColorSpace">3</int>
+							<bytes key="NSWhite">MC41AA</bytes>
+						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="284750889">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
@@ -140,10 +146,11 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<string key="IBUINormalTitle">share</string>
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="123217188"/>
-						<reference key="IBUINormalTitleShadowColor" ref="157938274"/>
+						<reference key="IBUINormalTitleShadowColor" ref="700530203"/>
 						<reference key="IBUIFontDescription" ref="644626406"/>
 						<reference key="IBUIFont" ref="669131777"/>
 					</object>
@@ -179,10 +186,11 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 1}</string>
 						<string key="IBUINormalTitle">shop</string>
 						<reference key="IBUIHighlightedTitleColor" ref="700530203"/>
 						<reference key="IBUINormalTitleColor" ref="123217188"/>
-						<reference key="IBUINormalTitleShadowColor" ref="157938274"/>
+						<reference key="IBUINormalTitleShadowColor" ref="700530203"/>
 						<reference key="IBUIFontDescription" ref="644626406"/>
 						<reference key="IBUIFont" ref="669131777"/>
 					</object>
